[tool.poetry]
name = "python-youtube"
version = "0.9.7"
description = "A Python wrapper around for YouTube Data API."
authors = ["ikaroskun <merle.liukun@gmail.com>"]
license = "MIT"
keywords = ["youtube-api", "youtube-v3-api", "youtube-data-api", "youtube-sdk"]
readme = "README.rst"
homepage = "https://github.com/sns-sdks/python-youtube"
repository = "https://github.com/sns-sdks/python-youtube"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

packages = [
    { include = "pyyoutube" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
requests-oauthlib = "=1.3.0,<3.0.0"
isodate = ">=0.6.0,<=0.7.2"
dataclasses-json = [
    { version = "^0.5.3", python = "<3.7" },
    { version = "^0.6.0", python = ">=3.7" }
]

[tool.poetry.dev-dependencies]
responses = [
    { version = "^0.17.0", python = "<3.7" },
    { version = "^0.23.0", python = ">=3.7" }
]
pytest = [
    { version = "^6.2", python = "<3.7" },
    { version = "^7.1", python = ">=3.7" }
]
pytest-cov = [
    { version = "^2.10.1", python = "<3.7" },
    { version = "^3.0.0", python = ">=3.7" }
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
