[tool.poetry]
name = "python-youtube"
version = "0.9.9"
description = "A Python wrapper around for YouTube Data API."
authors = ["ikaroskun <merle.liukun@gmail.com>"]
license = "MIT"
keywords = ["youtube-api", "youtube-v3-api", "youtube-data-api", "youtube-sdk"]
readme = "README.rst"
homepage = "https://github.com/sns-sdks/python-youtube"
repository = "https://github.com/sns-sdks/python-youtube"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

packages = [
    { include = "pyyoutube" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.28.0,<3.0.0"
requests-oauthlib = ">=1.3.0,<3.0.0"
isodate = ">=0.6.1,<1.0.0"
dataclasses-json = ">=0.6.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
responses = "^0.25.0"
pytest = "^8.4.0"
pytest-cov = "^6.2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
